[tool.poetry]
name = "bali-va"
version = "0.1.0"
description = ""
authors = ["Josh <josh.yu_8@live.com>"]
readme = "README.md"
packages = [
    { include = "bali" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.106,<1"
uvicorn = "^0.29"
sqlalchemy = "^2.0"
pyhumps = "^3.8"
fastapi-pagination = "^0.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
